fix(table): the previous fix broke table display on mobile devices

--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -9,8 +9,5 @@ mjx-container[display="true"] {
 }
 
 table {
-  display: table;
-  width: auto;
-  margin: 1rem auto;
   overflow-y: hidden;
 }
